# python-tools

./: .gitignore  README.md  TODO.md  pyproject.toml
binary-encoder/: binary.py  example.ipynb
file-directory-structure-maker/: example.ipynb  structure.py
print-directory-tree/: example.ipynb  tree.py
python_tools/: toolbox.py
python_tools/binary-encoder/: binary-encoder-example.ipynb
python_tools/columnar-storage/: column_encoder.py  columnar-storage-example.ipynb
run-length-encoder/: example.ipynb  rle.py
tools/: toolbox-example.ipynb
tools/file-directory-structure-maker/: file-directory-structure-maker-example.ipynb
tools/run-length-encoder/: run-length-encoder-example.ipynb
