[tool.poetry]
name = "tools"
version = "0.1.0"
description = "Random (mostly Python) coding tools and functions"
authors = ["Chris Birch <datapointchris@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
