[tool.poetry]
name = "python_tools"
version = "0.1.0"
description = "Python coding tools and functions"
authors = ["Chris Birch <datapointchris@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pytest = "^7.1.3"
pandas = "^1.5.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
ipykernel = "^6.16.0"
black = {version = "^22.10.0", allow-prereleases = true}
Faker = "^15.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
